# connect

./: .codebook.toml  .dockerignore  .drone.yml  .errcheck.txt  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .mkdocs.yml  .travis.yml  .versions  .yamlfmt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Gopkg.toml  LICENSE  Makefile  README-FIPS.md  README.md  SECURITY.md  Taskfile.yml  benthos.go  checks.md  config.yml  go.mod  go.sum  go.work.bak  http.yaml  input.csv  investigate  main.go  netlify.toml  test.yaml  tools.go
.github/: CODEOWNERS  (+3 more)
internal/agent/template/: .gitignore  README.md  pyproject.toml  redpanda_agents.yaml
internal/agent/template/agents/: weather.py
internal/agent/template/mcp/resources/processors/: check_weather_tool.yaml
public/plugin/python/: README.md  Taskfile.yaml  connect.yaml  pyproject.toml
public/plugin/python/examples/: batch_json_input.py  fizzbuzz_processor.py  fizzbuzz_processor.yaml  json_input.py  json_input.yaml  logging_output.py  logging_output.yaml
public/plugin/python/src/redpanda/runtime/v1alpha1/: agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  agent_pb2_grpc.pyi  input_pb2.py  input_pb2.pyi  input_pb2_grpc.py  input_pb2_grpc.pyi  message_pb2.py  message_pb2.pyi  message_pb2_grpc.py  message_pb2_grpc.pyi  output_pb2.py  output_pb2.pyi  output_pb2_grpc.py  output_pb2_grpc.pyi  processor_pb2.py  processor_pb2.pyi  processor_pb2_grpc.py  processor_pb2_grpc.pyi
public/plugin/python/src/redpanda_connect/: __init__.py  _convert.py  _grpc.py  core.py  errors.py
public/plugin/python/src/redpanda_connect/_proto/redpanda/runtime/v1alpha1/: agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  agent_pb2_grpc.pyi  input_pb2.py  input_pb2.pyi  input_pb2_grpc.py  input_pb2_grpc.pyi  message_pb2.py  message_pb2.pyi  message_pb2_grpc.py  message_pb2_grpc.pyi  output_pb2.py  output_pb2.pyi  output_pb2_grpc.py  output_pb2_grpc.pyi  processor_pb2.py  processor_pb2.pyi  processor_pb2_grpc.py  processor_pb2_grpc.pyi
public/plugin/python/v1/: pyproject.toml
public/plugin/python/v1/src/redpanda_connect_v1/: __init__.py  _env.py  _message.py  _server.py  _spec.py  _value.py
public/plugin/python/v1/src/redpanda_connect_v1/_proto/redpanda/runtime/v1alpha1/: message_pb2.py  message_pb2_grpc.py  output_pb2.py  output_pb2_grpc.py
(+7243 files in other folders)
