[project]
name = "REDPANDA_PROJECT_NAME"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redpanda-agents",
]

[tool.uv.sources]
redpanda-agents = { git = "http://github.com/redpanda-data/agent.git", branch = "runtime" }
