[project]
name = "redpanda-connect-v1"
version = "0.1.0a0"
description = "Redpanda Connect v1 plugin SDK for Python (proof of concept)."
authors = [{ name = "Redpanda Data, Inc." }]
requires-python = ">=3.10"
license = "Apache-2.0"

dependencies = [
    "grpcio>=1.62",
    "protobuf>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redpanda_connect_v1"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.62",
    "mypy-protobuf>=3.5",
]
